# finetune

./: .gitignore  Dockerfile  Makefile  README.md  TODO.md  docker-compose.yml  main.py  nginx.conf  pyproject.toml  requirements.txt
obahamonde/Meta-Llama-3.1-test/checkpoint-3/: adapter_config.json  rng_state.pth  scheduler.pt  trainer_state.json
prisma/: schema.prisma
src/: handler.py
src/jobs/: etl.py  train.py
src/schema/: struct.py  worker.py
src/shared/: __init__.py  exceptions.py  structs.py  traits.py  utils.py
templates/: s3-cors.json
